# xyztest

./: .env  Cargo.toml  README.md  setup.sh
.vim/: coc-settings.json
netguard/: Cargo.toml
netguard-common/: Cargo.toml
netguard-ebpf/: Cargo.toml
netguard-ebpf/src/: main.rs
netguard/src/: main.rs
netguard/src/requests/: start_blocknet.rs
netguard/src/responses/: mod.rs  start_blocknet.rs
netguard/src/services/: config.rs  mod.rs  start_blocknet.rs  stop_blocknet.rs
netguard/src/services_helper/: blocknet.rs  mod.rs
xtask/src/: build_ebpf.rs  run.rs
