[package]
name = "netguard"
version = "0.1.2"
edition = "2021"
publish = false
authors = ["Ravindar Singh<ravindars.r@mizzle.io>"]

[dependencies]
aya = { git = "https://github.com/aya-rs/aya", features = ["async_tokio"] }
aya-log = { git = "https://github.com/aya-rs/aya" }
netguard-common = { path = "../netguard-common", features = ["user"] }
aya-obj={ git = "https://github.com/aya-rs/aya" }
anyhow = "1"
clap = { version = "4.1", features = ["derive"] }
log = "0.4"
tokio = { version = "1.25", features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "net",
    "signal",
    "time",
] }
bytes = "1"
env_logger = "0.11"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
dotenv = "0.15.0"
actix-web = "4.5.1"
nix = "0.29.0" 
sysinfo="0.31.1"
actix-service = "2.0.2"
futures-util = "0.3.30"
fork = "0.2.0"
kill_tree = "0.2.4"
ctrlc = "3.4.4"
libc = "0.2"
aya-ebpf-bindings = "=0.1.0"
sig = "1.0.0"
lazy_static = "1.5.0"
once_cell = "1.19.0"
num_cpus = "1.0"
tracing="0.1.37"
tracing-subscriber = "0.3.18"
mockall = "0.13.0" 
[[bin]]
name = "netguard"
path = "src/main.rs"
